<resources>
    <string name="app_name">SendRti</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_Funds">Funds</string>
    <string name="action_incometax">Incometax</string>
    <string name="APP_ID">85EDE223-00FF-44FB-8F32-BFE6D0DE953D</string>
    <string name="all_app_version">Sample UI v%1$s / SDK v%2$s</string>
    <string name="clientid">432050171493-gdc6jmkbfccrkajo4795pbmmc6ud6uqp.apps.googleusercontent.com</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="action_answer">Answersheet</string>
    <string name="action_satusfir">Statusfir</string>
    <string name="action_passport">passport</string>
    <string name="action_marksheet">Marksheet</string>
    <string name="action_property">property</string>
    <string name="action_cannotfind">cannotfind</string>
    <string name="Dashboard">Dashboard</string>
    <string name="Notification">Notification</string>
    <string name="MyRti">MY RTIs</string>
    <string name="menu_logout">Logout</string>
    <string name="SavePayments">Safe Payments</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_ApplyNow">ApplyNow</string>
    <string name="Track">Track</string>
    <string name="Payments">Payments</string>
    <string name="Contact">Contact</string>
    <string name="Help">Help</string>
    <string name="Answersheet">Answersheet</string>
    <string name="Marksheet">Marksheet</string>
    <string name="Property">Property</string>
    <string name="Passport">Passport</string>
    <string name="Incometax">Incometax</string>
    <string name="firstatus">Firstatus</string>
    <string name="Chat">Chat</string>
    <string name="Query">Query</string>
    <string name="Epf">Epf</string>
    <string name="Pension">Pension</string>
    <string name="EmailQuery">EmailQuery</string>
    <string name="Submit">Submit</string>
    <string name="Email">Email</string>
    <string name="Name">Name</string>
    <string name="Message">Message</string>
    <string name="MyRTI">MyRti</string>
    <string name="RtiAppliactionNumber">Rti Application Number :</string>
    <string name="Home">Home</string>
    <string name="Logout">Logout</string>
    <string name="ApplicationDetails">ApplicationDetails</string>
    <string name="Description">Description</string>
    <string name="Date">Date</string>
    <string name="total">Total</string>
    <string name="Nameofapplicant">Name of applicant</string>
    <string name="Rollnumber">Roll Number</string>
    <string name="NameofExam">Name of Exam</string>
    <string name="DateOfExam">Date of Exam</string>
    <string name="MoreInformation">MORE INFORMATION</string>
    <string name="LastName">Last Name</string>
    <string name="YourEmail">Your Email</string>
    <string name="YourMobileNo">Your Mobile Number</string>
    <string name="YourAddress">Your Address</string>
    <string name="Pincode">PinCode</string>
    <string name="pricing">Pricing</string>
    <string name="CalculateRTIfilingchargesfor">Calculate RTI filing charges for</string>
    <string name="Faq">FAQ</string>
    <string name="WHATISRTI">What is Rti</string>
    <string name="Wahtsisinformation">WHAT ARE THE INFORMATIONS WHICH CAN BE ASKED FROM THE GOVERNMENT AGENCIES UNDER RTI?</string>
    <string name="WHATISSENDRTI.COM">WHAT IS SENDRTI.COM?</string>
    <string name="howwilliknow">HOW WILL I KNOW THAT WHETHER YOU HAVE FILED MY RTI APPLICATION OR NOT?</string>
    <string name="HOWDOESSENDRTI.COMWORK">HOW DOES SENDRTI.COM WORK?</string>
    <string name="canyoursiteguarantee">CAN YOUR SITE GUARANTEE THAT I WILL RECEIVE THE SOUGHT INFORMATION FROM THE DEPARTMENT?</string>
    <string name="download" />
    <string name="cancel">cancel</string>
    <string name="upload">upload</string>
    <string name="open_channel_chat_content_desc_profile">Profiledescription</string>
    <string name="open_channel_list_participant_count">%1$d participants</string>
    <string name="ChatFragment">ChatFragment</string>
    <string name="login_user_id">loginwithuser</string>
    <string name="login_user_nickname">loginusernickname</string>
    <string name="menu_Query">Query</string>
    <string name="username">Username</string>
    <string name="password">password</string>

</resources>
