<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Home2"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_myrti"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_Dashboard"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_Query"
            android:title="@string/menu_Query" />
        <item
            android:id="@+id/nav_EmailQuery"
            android:title="@string/EmailQuery" />
        <item
            android:id="@+id/nav_pricing2"
            android:title="@string/pricing" />

        <item
            android:id="@+id/nav_faq"
            android:title="@string/Faq" />
        <item
            android:id="@+id/nav_Logout"
            android:title="@string/Logout" />



    </group>
</menu>