<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailQuery.EmailQuery"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="445dp"
        android:orientation="vertical"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="23dp"
        android:background="@color/lightBlue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="398dp"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="23dp"
            android:background="@drawable/backgroundapplynow">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:layout_marginRight="23dp"
                android:layout_marginLeft="23dp"
                android:hint="@string/Name"
                android:paddingLeft="20dp"
                android:layout_marginTop="23dp"
                android:background="@drawable/backgroundapplynow">

            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:layout_marginRight="23dp"
                android:layout_marginLeft="23dp"
                android:hint="@string/Email"
                android:paddingLeft="20dp"
                android:layout_marginTop="23dp"
                android:background="@drawable/backgroundapplynow">

            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="178dp"
                android:layout_marginRight="23dp"
                android:hint="@string/Message"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:gravity="top"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="23dp"
                android:background="@drawable/backgroundapplynow">

            </EditText>




        </LinearLayout>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/lightBlue"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="23dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="23dp"
            android:layout_marginTop="23dp"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:background="@drawable/backgroundapplynow">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/backgroundapplynow"
                android:text="@string/Submit">

            </Button>


        </LinearLayout>
    </LinearLayout>





</RelativeLayout>